@@ -1,4 +1,14 @@
-### Fix log dsplay (HEAD -> main)
+### Fix option in tqdm (HEAD -> main)
+>Mon, 13 Mar 2023 03:48:28 +0100
+
+>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Fix log dsplay (origin/main)
 >Mon, 13 Mar 2023 03:05:17 +0100
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
@@ -8,7 +18,7 @@
 
 
 
-### Add a progress bar using tqdm or logger (origin/main)
+### Add a progress bar using tqdm or logger
 >Mon, 13 Mar 2023 02:46:51 +0100
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
